firewall-rules/firewall-rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct  9 05:00:07 2026
*filter
:INPUT ACCEPT [50:12794]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [47:4892]
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -d 192.168.20.10/32 -i enp0s10 -o enp0s8 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 192.168.30.0/24 -d 192.168.20.10/32 -i enp0s9 -o enp0s8 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 192.168.30.0/24 -m limit --limit 6/min --limit-burst 10 -j LOG --log-prefix "LAB-INTERNAL-DENY " --log-level 6
-A FORWARD -s 192.168.10.0/24 -d 192.168.30.0/24 -j DROP
-A FORWARD -s 192.168.20.0/24 -d 192.168.30.0/24 -j DROP
-A FORWARD -s 192.168.20.10/32 -d 8.8.8.8/32 -i enp0s8 -o enp0s3 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 192.168.20.10/32 -d 186.177.18.74/32 -i enp0s8 -o enp0s3 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Fri Oct  9 05:00:07 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct  9 05:00:07 2026
*nat
:PREROUTING ACCEPT [3:1236]
:INPUT ACCEPT [1:84]
:OUTPUT ACCEPT [16:1172]
:POSTROUTING ACCEPT [16:1172]
-A POSTROUTING -s 192.168.20.10/32 -d 8.8.8.8/32 -o enp0s3 -p udp -m udp --dport 53 -j MASQUERADE
-A POSTROUTING -s 192.168.20.10/32 -d 186.177.18.74/32 -o enp0s3 -p udp -m udp --dport 123 -j MASQUERADE
COMMIT
# Completed on Fri Oct  9 05:00:07 2026
